--- a/templates/base.html
+++ b/templates/base.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>CaSiNo LoCaLe</title>
-        <style>
-            html {
-                background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
-                width: 100%;
-                height: 100%;
-            }
-            body {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                padding: 10px;
-            }
-        </style>
-    </head>
 
-    <body>
-    <h1>CaSiNo LoCaLe</h1>
-    {% block content %}{% endblock content %}
-    </body>
+<head>
+    <title>Casino Locale</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8"/>
+
+    {% load static %}
+    <link href="{% static "main.css" %}" rel="stylesheet">
+    {% block head %}{% endblock head %}
+</head>
+
+<body>
+    <header>
+        <article>
+            <h1>Casino<em>Locale</em></h1>
+            <nav>
+                {% for link in nav_links %}
+                <a href="{{link.url}}">
+                    {{link.description}}
+                </a>
+                {% endfor %}
+            </nav>
+        </article>
+    </header>
+    <main>
+        {% block content %}{% endblock content %}
+    </main>
+</body>
+
 </html>
