--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,37 +1,40 @@
 {% extends 'base.html' %}
 
+{% block head %}
+{% load static %}
+<link href="{% static "login.css" %}" rel="stylesheet">
+{% endblock head %}
+
 {% block content %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+<article id="login-page">
+    <h1>Login</h1>
+    <br>
+    {% if form.errors %}
+    <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
 
-{% if next %}
-{% if user.is_authenticated %}
-<p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-{% else %}
-<p>Please login to see this page.</p>
-{% endif %}
-{% endif %}
+    {% if next %}
+    {% if user.is_authenticated %}
+    <p>Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.</p>
+    {% else %}
+    <p>Please login to see this page.</p>
+    {% endif %}
+    {% endif %}
 
-<form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
-    </table>
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        {{ form.username.label_tag }}
+        {{ form.username }}
+        {{ form.password.label_tag }}
+        {{ form.password }}
+        <input class="button" id="login-button" type="submit" value="Login">
+        <input type="hidden" name="next" value="{{ next }}">
 
-    <input type="submit" value="Login">
-    <input type="hidden" name="next" value="{{ next }}">
-</form>
-<a href='/signup/'>Sign up</a>
-<a href='/password_reset/'>Reset password</a>
+        <a class="button" href='/signup/'>Sign up</a>
+        <a class="button" href='/password_reset/'>Reset password</a>
+    </form>
+</article>
 
 {% endblock %}
