--- a/templates/game/index.html
+++ b/templates/game/index.html
@@ -5,10 +5,13 @@
     <title>Game Rooms</title>
 </head>
 <body>
-    What game room would you like to enter?<br>
+    Create a new room?<br>
     <input id="room-name-input" type="text" size="100"><br>
-    <input id="room-name-submit" type="button" value="Enter">
-
+    <input id="room-name-submit" type="button" value="Enter"><br><br>
+    Available rooms:
+    {% for name, users in rooms %}
+    <p><a href="{{name}}">{{name}} || {{users}}</a></p>
+    {% endfor %}
     <script>
         document.querySelector('#room-name-input').focus();
         document.querySelector('#room-name-input').onkeyup = function(e) {
