--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h3>Forgot password</h3>
+<div class="registration">
+  <h2>Forgot password</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Submit</button>
+    <button type="submit" class="button">Submit</button>
   </form>
+</div>
 {% endblock %}
