--- a/static/main.css
+++ b/static/main.css
@@ -25,6 +25,7 @@ html {
     height: 100%;
 
     background-color: var(--main-color);
+    color: white;
 }
 
 body {
@@ -78,26 +79,62 @@ body>header {
 
 body>header>article {
     width: 1000px;
-}
-
-body>header>article>h1 {
-    font-size: 2em;
-}
-
-body>header>article>h1>em {
-    color: var(--primary-color);
-    font-style: normal;
+    display: flex;
+    justify-content: space-between;
 }
 
 body>header>article>nav {
-    width: 100%;
     display: flex;
+    align-items: center;
+}
+
+body>header>article>nav>a,
+body>header>article>nav>a:visited {
+    color: white;
+    text-decoration: none;
+    margin: 0 1rem;
+    font-weight: bold;
+}
+
+body>header>article>nav>a:hover {
+    color: var(--main-color-light);
 }
 
 body>main {
     flex-grow: 1;
-
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.game-room {
+    display: flex;
+    flex-direction: column;
+}
+
+.game-room>input {
+    margin: 0.5rem 0;
+}
+
+.logo-menu {
+    font-size: 2em;
+    margin: 0;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.logo-menu:hover {
+    opacity: 0.7;
+}
+
+.logo-menu>em {
+    color: var(--primary-color);
+    font-style: normal;
 }
