--- a/templates/base.html
+++ b/templates/base.html
@@ -2,19 +2,26 @@
 <html>
 
 <head>
+    {% block title %}
     <title>Casino Locale</title>
+    {% endblock title %}
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
 
     {% load static %}
     <link href="{% static "main.css" %}" rel="stylesheet">
-    {% block head %}{% endblock head %}
+    <link href="{% static "registration.css" %}" rel="stylesheet">
+    {% block head %}
+    {% endblock head %}
 </head>
 
 <body>
     <header>
         <article>
-            <h1>Casino<em>Locale</em></h1>
+            <a href="/" class="logo-menu">
+                Casino<em>Locale</em>
+            </a>
             <nav>
                 {% for link in nav_links %}
                 <a href="{{link.url}}">
