--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="registration">
   <p>
     Your password has been set. You may go ahead and <a href="{% url 'login' %}">sign in</a> now.
   </p>
+</div>
 {% endblock %}
