--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="registration">
   <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
     {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% if field.help_text %}
-          <small style="color: grey">{{ field.help_text }}</small>
-        {% endif %}
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
-        {% endfor %}
-      </p>
+    <p>
+      {{ field.label_tag }}<br>
+      {{ field }}
+      {% if field.help_text %}
+      <small style="color: grey">{{ field.help_text }}</small>
+      {% endif %}
+      {% for error in field.errors %}
+    <p style="color: red">{{ error }}</p>
     {% endfor %}
-    <button type="submit">Sign up</button>
+    </p>
+    {% endfor %}
+    <button type="submit" class="button">Sign up</button>
   </form>
+</div>
 {% endblock %}
