--- a/static/games.css
+++ b/static/games.css
@@ -36,3 +36,41 @@
 .rooms li+li {
     margin-top: 20px;
 }
+
+.game-choice {
+    list-style: none;
+    display: flex;
+    padding: 0;
+    width: 80%;
+    justify-content: space-evenly;
+}
+
+.game-choice li {
+    width: 50%;
+}
+
+.game-choice input[type="radio"] {
+    width: 0;
+    margin: 0;
+}
+
+.game-choice input[type="radio"] + label {
+    display: block;
+}
+
+.game-choice input[type="radio"]:not(:checked) + label {
+    background: var(--main-color-light);
+    color: var(--secondary-color);
+}
+
+.game-choice input[type="radio"]:checked + label:hover {
+    background-color: var(--primary-color);
+    color: white;
+
+}
+
+.game-choice input[type="radio"]:not(:checked) + label:hover {
+    color: white;
+    cursor: pointer;
+}
+
