--- a/templates/game/room.html
+++ b/templates/game/room.html
@@ -12,6 +12,8 @@
 {% block content %}
 {{ room_name|json_script:"room-name" }}
 {{ user|json_script:"user-id" }}
+
+{% if True %}
 <section>
     <article>
         <canvas></canvas>
@@ -44,4 +46,120 @@
         </table>
     </article>
 </section>
+
+{% else %}
+
+<div class="game-room">
+    <h1>
+        You're in room {{ room_name }}
+    </h1>
+    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
+    <input id="chat-message-input" type="text" size="100"><br>
+    <input id="chat-message-submit" type="button" value="Send">
+
+    <input id="ready" type="button" value="Ready">
+    <input id="bet" type="button" value="Bet">
+
+    {% if False %}
+    <input id="hit" type="button" value="Hit">
+    <input id="stand" type="button" value="Stand">
+    <input id="split" type="button" value="Split">
+    <input id="double" type="button" value="Double">
+    {% else %}
+    <input id="fold" type="button" value="Fold">
+    <input id="call" type="button" value="Call">
+    <input id="raise" type="button" value="Raise">
+    <input id="check" type="button" value="Check">
+    {% endif %}
+
+
+    <script>
+        const roomName = JSON.parse(document.getElementById('room-name').textContent);
+
+        const chatSocket = new WebSocket(
+            'ws://'
+            + window.location.host
+            + '/ws/room/'
+            + roomName
+            + '/'
+        );
+
+
+
+        chatSocket.onclose = function (e) {
+            console.error('Chat socket closed unexpectedly');
+        };
+
+        document.querySelector('#chat-message-input').focus();
+        document.querySelector('#chat-message-input').onkeyup = function (e) {
+            if (e.keyCode === 13) {  // enter, return
+                document.querySelector('#chat-message-submit').click();
+            }
+        };
+
+        document.querySelector('#chat-message-submit').onclick = function (e) {
+            const messageInputDom = document.querySelector('#chat-message-input');
+            const message = messageInputDom.value;
+            chatSocket.send(JSON.stringify({
+                'message': message,
+                'type': 'not_move'
+            }));
+            messageInputDom.value = '';
+        };
+
+        document.querySelector('#ready').onclick = function (e) {
+            chatSocket.send(JSON.stringify({
+                'type': 'init',
+                'message': { 'action': 'ready' }
+            }))
+        }
+
+        chatSocket.onmessage = function (e) {
+            const data = JSON.parse(e.data);
+            console.log(data)
+            document.querySelector('#chat-log').value += ('round: ' + data.message.game_round + " ; turn: " + data.message.turn + '\n');
+        };
+
+        document.getElementById("fold").onclick = function (e) {
+            chatSocket.send(JSON.stringify({
+                "type": "move",
+                "message": { "action": "fold" }
+            }))
+        }
+
+        document.getElementById("call").onclick = function (e) {
+            chatSocket.send(JSON.stringify({
+                "type": "move",
+                "message": { "action": "call" }
+            }))
+        }
+
+        document.getElementById("check").onclick = function (e) {
+            chatSocket.send(JSON.stringify({
+                "type": "move",
+                "message": { "action": "call" }
+            }))
+        }
+
+        document.querySelector('#raise').onclick = function (e) {
+            const messageInputDom = document.querySelector('#chat-message-input');
+            const message = messageInputDom.value;
+            chatSocket.send(JSON.stringify({
+                'type': 'move',
+                'message': { 'action': 'raise', 'value': parseInt(message) }
+            }))
+        }
+
+        document.querySelector('#bet').onclick = function (e) {
+            const messageInputDom = document.querySelector('#chat-message-input');
+            const message = messageInputDom.value;
+            chatSocket.send(JSON.stringify({
+                'type': 'move',
+                'message': { 'action': 'bet', 'value': parseInt(message) }
+            }))
+        }
+
+    </script>
+</div>
+{% endif %}
 {% endblock content%}
