restructuring, start of render engine

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
     <meta charset="utf-8" />
 
     {% load static %}
-    <link href="{% static "main.css" %}" rel="stylesheet">
-    <link href="{% static "registration.css" %}" rel="stylesheet">
+    <link href="{% static "css/main.css" %}" rel="stylesheet">
+    <link href="{% static "css/registration.css" %}" rel="stylesheet">
     {% block head %}
     {% endblock head %}
 </head>
