--- a/templates/game/index.html
+++ b/templates/game/index.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 {% load static %}
-<link href="{% static "games.css" %}" rel="stylesheet">
+<link href="{% static "css/games.css" %}" rel="stylesheet">
 {% endblock head %}
 
 {% block title %}
