--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 {% load static %}
-<link href="{% static "login.css" %}" rel="stylesheet">
+<link href="{% static "css/login.css" %}" rel="stylesheet">
 {% endblock head %}
 
 {% block content %}
