--- a/templates/game/room.html
+++ b/templates/game/room.html
@@ -2,6 +2,7 @@
 {% block head %}
 {% load static %}
 <script src="{% static "js/game/index.js" %}" type="module"></script>
+<link rel="stylesheet" href="{% static "css/room.css" %}">
 {% endblock head %}
 
 {% block title %}
@@ -9,23 +10,23 @@
 {% endblock title %}
 
 {% block content %}
-<div class="game-room">
-    <h1>
-        You're in room {{ room_name }}
-    </h1>
-    <canvas height="600">
+<h1>
+    You're in room {{ room_name }}
+</h1>
+<section>
+    <canvas></canvas>
+    <nav>
+        <input class="button" data-action="ready" type="button" value="Ready">
+        <input disabled class="button" data-action="hit" type="button" value="Hit">
+        <input disabled class="button" data-action="stand" type="button" value="Stand">
+        <input disabled class="button" data-action="split" type="button" value="Split">
+        <input disabled class="button" data-action="double" type="button" value="Double">
+        <div>
+            <input disabled data-action="bet" id="bet-value" type="number">
+            <input disabled class="button" data-action="bet" type="button" value="Bet">
+        </div>
+    </nav>
+</section>
 
-    </canvas>
-    <input id="chat-message-input" type="text" size="100"><br>
-    <input id="chat-message-submit" type="button" value="Send">
-
-    <input id="ready" type="button" value="Ready">
-    <input id="hit" type="button" value="Hit">
-    <input id="stand" type="button" value="Stand">
-    <input id="split" type="button" value="Split">
-    <input id="double" type="button" value="Double">
-    <input id="bet" type="button" value="Bet">
-
-    {{ room_name|json_script:"room-name" }}
-</div>
+{{ room_name|json_script:"room-name" }}
 {% endblock content%}
