poker/blackjack conditional rendering

--- a/templates/game/room.html
+++ b/templates/game/room.html
@@ -13,7 +13,7 @@
 {{ room_name|json_script:"room-name" }}
 {{ user|json_script:"user-id" }}
 
-{% if True %}
+{% if render_blackjack %}
 <section>
     <article>
         <canvas></canvas>
