--- a/templates/game/poker.html
+++ b/templates/game/poker.html
@@ -35,6 +35,16 @@
         <h1>You're in room {{ room_name }}</h1>
         <h1>Pot sum: <em id="pot-sum">0</em></h1>
         <h1>Your balance: <em id="your-balance">0</em></h1>
+        <table>
+            <thea
+                <tr>
+                    <th>Name</th>
+                    <th>Result</th>
+                </tr>
+            </thead>
+            <tbody id="player-list">
+            </tbody>
+        </table>
     </article>
 </section>
 {% endblock content%}
