--- a/templates/game/poker.html
+++ b/templates/game/poker.html
@@ -40,6 +40,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Result</th>
+                    <th>Balance</th>
                 </tr>
             </thead>
             <tbody id="player-list">
