blackjack splitting changes

--- a/templates/game/blackjack.html
+++ b/templates/game/blackjack.html
@@ -30,6 +30,7 @@
     </article>
     <article>
         <h1>You're in room {{ room_name }}</h1>
+        <input class="button" data-action="add_bot" type="button" value="Add a bot">
         <h1>Croupier sum: <em id="croupier-sum">0</em></h1>
         <!-- todo make balance appear here -->
         <table>
